--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="cover">
-        hello am here as a dummy.
+        <!-- hello am here as a dummy. -->
     </div>
 
     <div id="container"></div>
