--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="cover">
         <!-- hello am here as a dummy. -->
     </div>
+    <div class="cover">
+        
+    </div>
 
     <div id="container"></div>
     <script src="./src/index.js"></script>
