--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="cover">
         
     </div>
-
+    <div class="toggle">
+        change color.
+    </div>
     <div id="container"></div>
     <script src="./src/index.js"></script>
 </body>
