--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div class="cover">
+    <div class="cover ripple-blue">
         <!-- hello am here as a dummy. -->
     </div>
     <div class="cover">
