--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="cover ripple-blue">
         <!-- hello am here as a dummy. -->
     </div>
-    <div class="cover">
+    <div class="cover ripple-orange">
         
     </div>
     <div class="toggle">
